--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-2.85MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1019.2KB/s(Youtube:不良林), server: hkbgp1.jiantian.xyz, port: 14326, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: hkbgp1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-159.9KB/s(Youtube:不良林), server: 161.35.69.20, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林), server: 213.183.53.208, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
-  - {name: 🇨🇳 中国-10.51MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-410.8KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇬🇧 英国-1.53MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-10.60MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-490.6KB/s(Youtube:不良林), server: 213.183.53.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
+  - {name: 🇸🇬 新加坡-170.0KB/s(Youtube:不良林), server: w12.udpgw.com, port: 443, type: trojan, password: 08964210-e7b8-11ec-95aa-1239d0255272, sni: w12.udpgw.com, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.43MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇳 中国-7.81MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇨🇳 中国-7.83MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.65MB/s(Youtube:不良林), server: 134.195.196.150, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇳 台湾-1.65MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇫🇷 法国-656.0KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1019.2KB/s(Youtube:不良林)
-      - 🇩🇪 德国-159.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-410.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-490.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-170.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.65MB/s(Youtube:不良林)
+      - 🇫🇷 法国-656.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1019.2KB/s(Youtube:不良林)
-      - 🇩🇪 德国-159.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-410.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-490.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-170.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.65MB/s(Youtube:不良林)
+      - 🇫🇷 法国-656.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1019.2KB/s(Youtube:不良林)
-      - 🇩🇪 德国-159.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-410.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-490.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-170.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.65MB/s(Youtube:不良林)
+      - 🇫🇷 法国-656.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-1.65MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1019.2KB/s(Youtube:不良林)
-      - 🇩🇪 德国-159.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-410.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-490.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-170.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.65MB/s(Youtube:不良林)
+      - 🇫🇷 法国-656.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1019.2KB/s(Youtube:不良林)
-      - 🇩🇪 德国-159.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-410.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-490.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-170.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.65MB/s(Youtube:不良林)
+      - 🇫🇷 法国-656.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1019.2KB/s(Youtube:不良林)
-      - 🇩🇪 德国-159.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-410.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-490.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-170.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.65MB/s(Youtube:不良林)
+      - 🇫🇷 法国-656.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1019.2KB/s(Youtube:不良林)
-      - 🇩🇪 德国-159.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-410.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-490.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-170.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.65MB/s(Youtube:不良林)
+      - 🇫🇷 法国-656.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
