--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-1.53MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-348.7KB/s(Youtube:不良林), server: scloud58.jafiyun.life, port: 22058, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud58.jafiyun.life, skip-cert-verify: true}
   - {name: 🇨🇳 中国-10.60MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-490.6KB/s(Youtube:不良林), server: 213.183.53.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
-  - {name: 🇸🇬 新加坡-170.0KB/s(Youtube:不良林), server: w12.udpgw.com, port: 443, type: trojan, password: 08964210-e7b8-11ec-95aa-1239d0255272, sni: w12.udpgw.com, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.43MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.81MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.83MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.65MB/s(Youtube:不良林), server: 134.195.196.150, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇳 台湾-1.65MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇫🇷 法国-656.0KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇷🇺 俄罗斯联邦-234.2KB/s(Youtube:不良林), server: 213.183.53.208, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 🇩🇪 德国-2.40MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-918.8KB/s(Youtube:不良林), server: 213.183.59.214, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇳🇱 荷兰-1013.2KB/s(Youtube:不良林), server: 213.183.59.214, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
+  - {name: 🇳🇱 荷兰-637.7KB/s(Youtube:不良林), server: 213.183.59.214, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
+  - {name: 🇳🇱 荷兰-961.2KB/s(Youtube:不良林), server: 213.183.59.214, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 🇳🇱 荷兰-1.46MB/s(Youtube:不良林), server: 213.183.59.214, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
+  - {name: 🇳🇱 荷兰-1.64MB/s(Youtube:不良林), server: 213.183.59.214, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
+      - 🇭🇰 香港-348.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-10.60MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-490.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-170.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.65MB/s(Youtube:不良林)
-      - 🇫🇷 法国-656.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-234.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.40MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-918.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1013.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-637.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-961.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
+      - 🇭🇰 香港-348.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-10.60MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-490.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-170.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.65MB/s(Youtube:不良林)
-      - 🇫🇷 法国-656.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-234.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.40MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-918.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1013.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-637.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-961.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
+      - 🇭🇰 香港-348.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-10.60MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-490.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-170.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.65MB/s(Youtube:不良林)
-      - 🇫🇷 法国-656.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-234.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.40MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-918.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1013.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-637.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-961.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.65MB/s(Youtube:不良林)
+      - 🇭🇰 香港-348.7KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
+      - 🇭🇰 香港-348.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-10.60MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-490.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-170.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.65MB/s(Youtube:不良林)
-      - 🇫🇷 法国-656.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-234.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.40MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-918.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1013.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-637.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-961.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
+      - 🇭🇰 香港-348.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-10.60MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-490.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-170.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.65MB/s(Youtube:不良林)
-      - 🇫🇷 法国-656.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-234.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.40MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-918.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1013.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-637.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-961.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
+      - 🇭🇰 香港-348.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-10.60MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-490.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-170.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.65MB/s(Youtube:不良林)
-      - 🇫🇷 法国-656.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-234.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.40MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-918.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1013.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-637.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-961.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
+      - 🇭🇰 香港-348.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-10.60MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-490.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-170.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.65MB/s(Youtube:不良林)
-      - 🇫🇷 法国-656.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-234.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.40MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-918.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1013.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-637.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-961.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
